<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/wish_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/list_item_place_margin"
    android:background="#5EE3F5"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/list_item_place_padding"
    android:textAppearance="@style/TextAppearance.AppCompat.Large">

    <TextView
        android:id="@+id/placeNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/place_name_textview"
        android:textColor="#4C15AD"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dateCreatedTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_created_textview"
        android:textColor="#6633C0" />

    <TextView
        android:id="@+id/reasonToGoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reason_to_visit_textview"
        android:textColor="#6633C0"
        android:textSize="18sp" />
</LinearLayout>