<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00976262"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/new_place_name"
        android:layout_width="294dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/enter_place_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/add_new_place"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/reason"
        android:layout_width="382dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/reason"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_place_name" />

    <Button
        android:id="@+id/add_new_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/add_place"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/wish_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/place_list_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reason"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>